# numquad

./: Cargo.toml  README.md
src/: geom.rs  lib.rs
src/polynomial/: mod.rs
src/quadrature/: gauss.rs  mod.rs  tanhsinh.rs
src/qubature/: mod.rs
